fix: overflow-x

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ body {
     padding: 0px;
     background-color: #f7f7f7;
     font-family: Arial, Helvetica, sans-serif;
+    overflow-x: hidden;
 }
 
 header #title {
@@ -176,7 +177,8 @@ li {
 }
 
 footer {
-    position: fixed;
+    position: relative;
+    top: 50px;
     bottom: 0;
     width: 100%;
     background-color: white;
